--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -77,9 +77,20 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 						<hr />
 					</div>
 					<slot />
+					<script type="text/javascript">
+						atOptions = {
+							'key' : '0b06593b8f70ff8c45b73c7810b46f76',
+							'format' : 'iframe',
+							'height' : 600,
+							'width' : 160,
+							'params' : {}
+						};
+					</script>
+					<script type="text/javascript" src="//www.highperformanceformat.com/0b06593b8f70ff8c45b73c7810b46f76/invoke.js"></script>
 				</div>
 			</article>
 		</main>
 		<Footer />
+		<script type='text/javascript' src='//pl24778445.profitablecpmrate.com/41/75/f3/4175f3b0050b33b322706a36c89293c2.js'></script>
 	</body>
 </html>
