--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,16 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 				Sociedad de Jóvenes, como también reflexiones, la matutina y herramientas útiles
 				para que un joven cristiano adventista mejore su vida espiritual y su relación con Dios.
 			</p>
+			<script type="text/javascript">
+				atOptions = {
+					'key' : '34a37e28024230ac2cfe1731babbb558',
+					'format' : 'iframe',
+					'height' : 300,
+					'width' : 160,
+					'params' : {}
+				};
+			</script>
+			<script type="text/javascript" src="//www.highperformanceformat.com/34a37e28024230ac2cfe1731babbb558/invoke.js"></script>
 		</main>
 		<Footer />
 	</body>
