--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,5 +31,6 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 			<script type="text/javascript" src="//www.highperformanceformat.com/34a37e28024230ac2cfe1731babbb558/invoke.js"></script>
 		</main>
 		<Footer />
+		<script type='text/javascript' src='//pl24787064.profitablecpmrate.com/b7/ea/7b/b7ea7b797b3a85428ca7cde0533bd6cc.js'></script>
 	</body>
 </html>
