--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -107,5 +107,6 @@ const posts = (await getCollection('blog')).sort(
 			</section>
 		</main>
 		<Footer />
+		<script type='text/javascript' src='//pl24787064.profitablecpmrate.com/b7/ea/7b/b7ea7b797b3a85428ca7cde0533bd6cc.js'></script>
 	</body>
 </html>
